_sass/_fi.scss
@media (max-width: 799px) {
	#fi-results-table {
		overflow-x: auto;
		border: 1px solid #ddd;
		table {
			text-align: center;
		}
	}
	.calculator-col-end {
		input {
			width: 88%;
			display: inline-block;
		}
		span {
			width: 10%;
			display: inline-block;
		}
	}
}

@media (min-width: 800px) {
	.calculator-fi {
		.calculator-col-start {
			width: 35%;
		}
		.calculator-col-end {
			width: 65%;
		}
		#fi-age {
			width: 15%;
		}
		#fi-accumulated {
			width: 31%;
		}
		#fi-quantity {
			width: 31%;
		}
	}
}

.calculator-fi {
	small {
		font-size: 63%;
	}
	#fi-calculator-results {
		margin-top: 15px;
		#fi-results-table table {
			border: 1px solid #ddd;
			tbody {
				tr {
					&.active {
						background-color: $picton-blue;
						color: white;
					}
					&:hover {
						background-color: $picton-blue;
						color: white;
					}
					td {
						text-align: center;
					}
				}
			}
			thead tr th {
				text-align: center;
			}
		}
	}
}

.InputAddOn {
  display: flex;
  margin-bottom: 1.5em;
}

.InputAddOn-field {
  flex: 1;
  margin-top: 0px !important;
}
.InputAddOn-field:not(:first-child) {
  border-left: 0;
}
.InputAddOn-field:not(:last-child) {
  border-right: 0;
}

.InputAddOn-item {
  background-color: rgba(147, 128, 108, 0.1);
  color: #666666;
  font: inherit;
  font-weight: normal;
}

.InputAddOn-field,
.InputAddOn-item {
  border: 1px solid rgba(147, 128, 108, 0.25);
  padding: 0.5em 0.75em;
}
.InputAddOn-field:first-child,
.InputAddOn-item:first-child {
  border-radius: 2px 0 0 2px;
}
.InputAddOn-field:last-child,
.InputAddOn-item:last-child {
  border-radius: 0 2px 2px 0;
}

